<resources>
    <string name="app_name">Genius Staffing</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAfhvl3a57BdGtWJdPlz5M-ywMX9W-C4Gk</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera_permission_confirmation">This app demonstrates the usage of CameraView. In order to do that, it needs permission to access camera.</string>
    <string name="camera_permission_not_granted">Camera app cannot do anything without camera permission.</string>
    <string name="picture_taken">Picture taken</string>
    <string name="aspect_ratio">Aspect ratio</string>
    <string name="switch_flash">Switch flash</string>
    <string name="switch_camera">Switch camera</string>
    <string name="flash_auto">Flash auto</string>
    <string name="flash_off">Flash off</string>
    <string name="flash_on">Flash on</string>
    <string name="take_picture">Recognize</string>
    <string name="add_person">Add</string>
    <string name="title_activity_add_person">AddPerson</string>
    <string name="company_name">Genius HRTech Limited</string>
    <!--<string name="company_name">Genius HR Tech</string>-->
    <string name="Consent">I hereby give my consent to and agree and authorize %1$s (“Genius”)
to fetch and/or use my personal data i.e. Adhaar Information, PAN, UAN details, my Bank
Account(s) details, and other personal documents/ information as may be required for the
following purposes:</string>
    <string name="Consent1">I understand that the type of personal data that may be collected, shall be shared with Genius,
its clients, Government departments, authorities and assignees. \n\nI understand and consent to Genius for using or sharing information submitted by me to
conduct employment verification and other related checks, through third party agency(ies)
engaged by it, from public information sources such as Employees\' Provident Fund
Organisation (EPFO). \n\nI am giving my consent voluntarily without coercion and at my own volition.
\n\n I authorize Genius to send and I agree to receive SMS alerts/E-mails related to my application
status and account activity as well as product use messages that Genius will send, from time
to time, on my mobile phone number/E-mail ID as mentioned in this application form. I will
intimate Genius in the event of any change in my mobile phone number/E-mail ID. I agree
that in the event I fail to inform the new mobile number/email id, I will not hold %1$s, responsible for non-communication of any information regarding my
application status and/or account activity. \n\nI will not hold %1$s and its officials responsible in the event this
document is not found to be in order or in case of any incorrect information provided by me. \n\nThe above consent and purpose of collecting information has been explained to me in my
local language.</string>
    <string-array name="days_of_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="tick_text">\u2714</string>
    <string name="cross_text">\u2717</string>

    <string name="crop_image_activity_title"></string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>

    <string name="pick_image_intent_chooser_title">Select source</string>

    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="dob_required">Date of Birth <font color='#FF0000'>*</font></string>
    <string name="guardian_name_required">Father\'s/Husband\'s Name<font color='#FF0000'>*</font></string>
    <string name="relationship_required">Relationship <font color='#FF0000'>*</font></string>
    <string name="gender_required">Gender <font color='#FF0000'>*</font></string>
    <string name="qualification_required">Highest Qualification <font color='#FF0000'>*</font></string>
    <string name="martial_required">Martial Status <font color='#FF0000'>*</font></string>
    <string name="blood_required">Blood Group <font color='#FF0000'>*</font></string>
    <string name="mobile_required">Mobile Number <font color='#FF0000'>*</font></string>
    <string name="whatsapp_required">Whatsapp Number <font color='#FF0000'>*</font></string>
    <string name="emergency_required">Emergency Number <font color='#FF0000'>*</font></string>
    <string name="email_required">Email ID <font color='#FF0000'>*</font></string>
    <string name="pin_required">PIN Code <font color='#FF0000'>*</font></string>
    <string name="state_required">State <font color='#FF0000'>*</font></string>
    <string name="city_required">City <font color='#FF0000'>*</font></string>
    <string name="address_required">Address <font color='#FF0000'>*</font></string>
    <string name="bank_required">Bank Name <font color='#FF0000'>*</font></string>
    <string name="account_required">Account Number <font color='#FF0000'>*</font></string>
    <string name="document_type_required">Document Type <font color='#FF0000'>*</font></string>
    <string name="document_required">Document <font color='#FF0000'>*</font></string>
    <string name="ifsc_required">IFSC Code <font color='#FF0000'>*</font></string>
    <string name="First_Name_required">First Name as per Bank <font color='#FF0000'>*</font></string>
    <string name="Lirst_Name_required">Last Name as per Bank <font color='#FF0000'>*</font></string>
    <string name="notification_text">Dear All, Please review your Income Tax Computation and select your Tax Regime. If no selection is made, the New Tax Regime will be applied by default. Choosing the Old Regime requires submitting your Tax Declaration and supporting documents on time. - <font color='#FF0000'>View Document</font></string>
    <string name="change_password_note"><font color='#FF0000'>Note: </font><font color='#F2000000'>Please change your default password before login</font></string>
    <string name="present_address">Present Address <font color='#FF0000'>*</font></string>
    <string name="present_pincode">Present Pincode <font color='#FF0000'>*</font></string>
    <string name="present_state">Present State <font color='#FF0000'>*</font></string>
    <string name="present_city">Present City <font color='#FF0000'>*</font></string>
    <string name="permanent_address">Permanent Address <font color='#FF0000'>*</font></string>
    <string name="permanent_pincode">Permanent Pincode <font color='#FF0000'>*</font></string>
    <string name="permanent_state">Permanent State <font color='#FF0000'>*</font></string>
    <string name="permanent_City">Permanent City <font color='#FF0000'>*</font></string>
    <string name="gender">Gender <font color='#FF0000'>*</font></string>
    <string name="relation">Relation <font color='#FF0000'>*</font></string>
    <string name="highest_qualification">Highest Qualification <font color='#FF0000'>*</font></string>
    <string name="marital_status">Marital Status <font color='#FF0000'>*</font></string>
    <string name="blood_group">Blood Group <font color='#FF0000'>*</font></string>
</resources>
