<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@drawable/lldesign">
    <LinearLayout
        android:id="@+id/llMain"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/lldesign"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        android:visibility="visible">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:text="@string/bank_required"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <LinearLayout
                            android:id="@+id/llBankName"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:background="@drawable/lldesign9"
                            android:orientation="vertical">

                            <Spinner
                                android:visibility="visible"
                                android:id="@+id/spBankName"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"></Spinner>

                            <TextView
                                android:visibility="gone"
                                android:id="@+id/txtBankName"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="Select Bank"
                                android:gravity="center_vertical"
                                android:paddingStart="5dp"
                                android:textColor="@color/black"
                                android:textSize="13sp"
                                android:maxLines="1"
                                android:ellipsize="end"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:text="@string/account_required"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <EditText
                            android:inputType="number"
                            android:id="@+id/etAccNumber"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:background="@drawable/lldesign9"
                            android:paddingLeft="5dp"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:textColor="@color/colorPrimary"
                            android:digits="1234567890"
                            android:maxLength="17"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:text="@string/document_type_required"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <LinearLayout
                            android:id="@+id/llDocumentType"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:background="@drawable/lldesign9">
                            <Spinner
                                android:id="@+id/spDocType"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"></Spinner>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:text="@string/document_required"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <ImageView
                            android:id="@+id/imgCamera"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/cameraicon"/>
                        <ImageView
                            android:layout_marginLeft="10dp"
                            android:id="@+id/imgDoc"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            />
                    </LinearLayout>
                </LinearLayout>
                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/misscolor"
                    android:textSize="10sp"
                    android:text="(Only Name imprinted Cancel cheque/Passbook with proper Bank name, Visible account number, Correct IFSC Code and Branch details)"></TextView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:text="@string/ifsc_required"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <EditText
                            android:maxLength="11"
                            android:id="@+id/etIFSC"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:background="@drawable/lldesign9"
                            android:paddingLeft="5dp"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:textColor="@color/colorPrimary"
                            android:digits="1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ-."/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:visibility="visible"
                    android:id="@+id/llBankVALBtn"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5">


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right">
                        <Button
                            android:visibility="gone"
                            android:id="@+id/btnBankVal"
                            android:textColor="@color/white"
                            android:padding="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:backgroundTint="@color/blue"
                            android:background="@drawable/lldesign9"
                            android:text="Verify Bank A/C"></Button>

                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/llBankVAL"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5">


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right">
                        <ImageView
                            android:layout_marginRight="2dp"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/mark"></ImageView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/purple"
                            android:textStyle="bold"
                            android:text="Bank A/C. Verified"></TextView>


                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:text="@string/First_Name_required"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <EditText
                            android:id="@+id/etFName"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:background="@drawable/lldesign9"
                            android:paddingLeft="5dp"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:textColor="@color/colorPrimary"
                            android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ."/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:text="@string/Lirst_Name_required"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <EditText
                            android:id="@+id/etLName"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:background="@drawable/lldesign9"
                            android:paddingLeft="5dp"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:textColor="@color/colorPrimary"
                            android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ."/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:gravity="right">
                    <Button
                        android:id="@+id/btnSave"
                        android:background="@drawable/lldesign"
                        android:backgroundTint="@color/blue"
                        android:text="Save"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:layout_width="200dp"
                        android:layout_height="40dp"></Button>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</LinearLayout>